@@ -26,6 +26,7 @@
 #include "../src/newchart.xpm"
 #include "../src/delete.xpm"
 #include "../src/edit.xpm"
+#include "../src/insert.xpm"
 #include <qlayout.h>
 
 #define BUTTON_SIZE 24
@@ -38,17 +39,14 @@ FormulaEdit::FormulaEdit (QWidget *w) : QWidget(w)
   hbox->setMargin(0);
   hbox->setSpacing(1);
   
-  list = new QTable(0, 3, this);
+  list = new QTable(0, 2, this);
   list->setSelectionMode(QTable::Single);
   list->setSorting(FALSE);
   list->horizontalHeader()->setLabel(0, tr("Function"));
   list->horizontalHeader()->setLabel(1, tr("Plot"));
-  list->horizontalHeader()->setLabel(2, tr("Parms"));
-  list->setColumnWidth(0, 50);
+  list->setColumnWidth(0, 75);
   list->setColumnWidth(1, 50);
-  list->setColumnWidth(2, 275);
   list->setColumnReadOnly(0, TRUE);
-  list->setColumnReadOnly(2, TRUE);
   hbox->addWidget(list);
   
   toolbar = new Toolbar(this, 30, 30, TRUE);
@@ -56,6 +54,9 @@ FormulaEdit::FormulaEdit (QWidget *w) : QWidget(w)
 
   toolbar->addButton("add", newchart, tr("Add"));
   QObject::connect(toolbar->getButton("add"), SIGNAL(clicked()), this, SLOT(addItem()));
+  
+  toolbar->addButton("insert", insert, tr("Insert"));
+  QObject::connect(toolbar->getButton("insert"), SIGNAL(clicked()), this, SLOT(insertItem()));
   
   toolbar->addButton("edit", edit, tr("Edit"));
   QObject::connect(toolbar->getButton("edit"), SIGNAL(clicked()), this, SLOT(editItem()));
@@ -104,7 +105,8 @@ void FormulaEdit::addItem ()
   list->setNumRows(list->numRows() + 1);
   
   list->setText(list->numRows() - 1, 0, type);
-  list->setText(list->numRows() - 1, 2, set.getString());
+  
+  steps.setData(QString::number(list->numRows() - 1), set.getString());
   
   QCheckTableItem *check = new QCheckTableItem(list, QString::null);
   check->setChecked(FALSE);
@@ -113,10 +115,71 @@ void FormulaEdit::addItem ()
   config.closePlugin(type);
 }
 
+void FormulaEdit::insertItem ()
+{
+  PrefDialog *dialog = new PrefDialog(this);
+  dialog->setCaption(tr("Insert Function"));
+  dialog->createPage (tr("Functions"));
+  dialog->addComboItem(tr("Functions"), tr("Functions"), functionList, 0);
+  int rc = dialog->exec();
+  if (rc != QDialog::Accepted)
+  {
+    delete dialog;
+    return;
+  }
+  
+  QString type = functionList[dialog->getComboIndex(tr("Functions"))];
+  delete dialog;
+  
+  Plugin *plug = config.getPlugin(Config::IndicatorPluginPath, type);
+  if (! plug)
+  {
+    config.closePlugin(type);
+    return;
+  }
+  
+  plug->setCustomFlag(TRUE);
+  
+  if (! plug->indicatorPrefDialog(this))
+  {
+    config.closePlugin(type);
+    return;
+  }
+
+  Setting set = plug->getIndicatorSettings();
+    
+  list->insertRows(list->currentRow(), 1);
+  
+  list->setText(list->currentRow(), 0, type);
+  
+  int loop;
+  for (loop = steps.count(); loop >= list->currentRow(); loop--)
+  {
+    if (loop > list->currentRow())
+    {
+      QString s = steps.getData(QString::number(loop - 1));
+      steps.setData(QString::number(loop), s);
+    }
+    else
+    {
+      if (loop == list->currentRow())
+      {
+        steps.setData(QString::number(loop), set.getString());
+      }
+    }
+  }
+  
+  QCheckTableItem *check = new QCheckTableItem(list, QString::null);
+  check->setChecked(FALSE);
+  list->setItem(list->currentRow(), 1, check);
+  
+  config.closePlugin(type);
+}
+
 void FormulaEdit::editItem ()
 {
   Setting set;
-  set.parse(list->text(list->currentRow(), 2));
+  set.parse(steps.getData(QString::number(list->currentRow())));
   
   Plugin *plug = config.getPlugin(Config::IndicatorPluginPath, set.getData("plugin"));
   if (! plug)
@@ -137,13 +200,14 @@ void FormulaEdit::editItem ()
 
   Setting set2 = plug->getIndicatorSettings();
     
-  list->setText(list->currentRow(), 2, set2.getString());
+  steps.setData(QString::number(list->currentRow()), set2.getString());
   
   config.closePlugin(set2.getData("plugin"));
 }
 
 void FormulaEdit::deleteItem ()
 {
+  steps.remove(QString::number(list->currentRow()));
   list->removeRow(list->currentRow());
 }
 
@@ -155,7 +219,8 @@ void FormulaEdit::setLine (QString d)
   list->setNumRows(list->numRows() + 1);
     
   list->setText(list->numRows() - 1, 0, set.getData("plugin"));
-  list->setText(list->numRows() - 1, 2, set.getString());
+  
+  steps.setData(QString::number(list->numRows() - 1), set.getString());
   
   QCheckTableItem *check = new QCheckTableItem(list, QString::null);
   if (! set.getData("plot").toInt())
@@ -168,7 +233,7 @@ void FormulaEdit::setLine (QString d)
 QString FormulaEdit::getLine (int i)
 {
   Setting set;
-  set.parse(list->text(i, 2));
+  set.parse(steps.getData(QString::number(i)));
   QCheckTableItem *check = (QCheckTableItem *) list->item(i, 1);
   set.setData("plot", QString::number(check->isChecked()));
   return set.getString();
@@ -177,16 +242,5 @@ QString FormulaEdit::getLine (int i)
 int FormulaEdit::getLines ()
 {
   return list->numRows();
-}
-
-QString FormulaEdit::getFormula (int i)
-{
-  return list->text(i, 2);
-}
-
-QString FormulaEdit::getPlot (int i)
-{
-  QCheckTableItem *check = (QCheckTableItem *) list->item(i, 1);
-  return QString::number(check->isChecked());
 }
 
